# titanfall-2-sdk

./: .gitmodules  CMakeLists.txt
extlibs/: CMakeLists.txt
extlibs/Sig/: CMakeLists.txt
include/titanfall_2/: CMakeLists.txt  Context.h  Object.h  Player.h  Signatures.h  UserCmd.h
source/: CMakeLists.txt  Context.cpp  Player.cpp
